--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 import CalendarPreview from './calendarComps/calendarPreview.astro';
-import Theme from './themeButton.astro';
+import Theme from './ThemeButton.astro';
 ---
 
 <!-- Improved header styling with better layout and colors -->
